@@ -30,7 +30,7 @@ from buildbot.schedulers.trysched import Try_Userpass
 from buildbot.worker import Worker
 from buildbot.util import identifiers as buildbot_identifiers
 
-from factories import (APITestsFactory, BindingsFactory, BuildFactory, Factory, GTKFactory,
+from factories import (APITestsFactory, BindingsFactory, BuildFactory, CommitQueueFactory, Factory, GTKFactory,
                        JSCTestsFactory, StyleFactory, TestFactory, WPEFactory, WebKitPerlFactory,
                        WebKitPyFactory, WinCairoFactory, WindowsFactory, iOSBuildFactory, iOSTestsFactory,
                        macOSBuildFactory, macOSWK1Factory, macOSWK2Factory, ServicesFactory, WatchListFactory)
