@@ -1,3 +1,14 @@
+2019-11-22  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Add basic commit-queue support in new EWS
+        https://bugs.webkit.org/show_bug.cgi?id=204517
+
+        Reviewed by Jonathan Bedard.
+
+        * BuildSlaveSupport/ews-build/config.json:
+        * BuildSlaveSupport/ews-build/factories.py:
+        * BuildSlaveSupport/ews-build/loadConfig.py:
+
 2019-11-22  Jonathan Bedard  <jbedard@apple.com>
 
         run-webkit-tests: Failing to run spindump shouldn't be fatal
